@@ -6,12 +6,11 @@ import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
-
 import javax.annotation.Nullable;
-import javax.validation.Valid;
-import javax.validation.ValidationException;
-import javax.validation.constraints.NotEmpty;
-import javax.validation.constraints.NotNull;
+import jakarta.validation.Valid;
+import jakarta.validation.ValidationException;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
 
 import c10n.C10N;
 import com.bakdata.conquery.ConqueryConstants;
@@ -22,21 +21,24 @@ import com.bakdata.conquery.apiv1.query.CQYes;
 import com.bakdata.conquery.apiv1.query.ConceptQuery;
 import com.bakdata.conquery.apiv1.query.Query;
 import com.bakdata.conquery.apiv1.query.QueryDescription;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQDateRestriction;
+import com.bakdata.conquery.apiv1.query.concept.specific.CQNegation;
 import com.bakdata.conquery.internationalization.ExportFormC10n;
 import com.bakdata.conquery.io.cps.CPSType;
 import com.bakdata.conquery.io.storage.MetaStorage;
-import com.bakdata.conquery.models.auth.entities.User;
-import com.bakdata.conquery.models.datasets.Dataset;
-import com.bakdata.conquery.models.forms.managed.ManagedForm;
+import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.forms.managed.ManagedInternalForm;
 import com.bakdata.conquery.models.forms.util.Alignment;
 import com.bakdata.conquery.models.forms.util.Resolution;
 import com.bakdata.conquery.models.forms.util.ResolutionShortNames;
 import com.bakdata.conquery.models.i18n.I18n;
+import com.bakdata.conquery.models.identifiable.ids.specific.DatasetId;
 import com.bakdata.conquery.models.identifiable.ids.specific.ManagedExecutionId;
+import com.bakdata.conquery.models.identifiable.ids.specific.UserId;
 import com.bakdata.conquery.models.query.ManagedQuery;
 import com.bakdata.conquery.models.query.QueryResolveContext;
 import com.bakdata.conquery.models.query.Visitable;
+import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonManagedReference;
@@ -92,6 +94,30 @@ public class ExportForm extends Form implements InternalForm {
 	@JsonIgnore
 	@EqualsAndHashCode.Exclude
 	private List<Resolution> resolvedResolutions;
+
+	/**
+	 * Maps the given resolution to a fitting alignment. It tries to use the alignment which was given as a hint.
+	 * If the alignment does not fit to a resolution (resolution is finer than the alignment), the first alignment that
+	 * this resolution supports is chosen (see the alignment order in {@link Resolution})
+	 * @param resolutions The temporal resolutions for which sub queries should be generated per entity
+	 * @param alignmentHint The preferred calendar alignment on which the sub queries of each resolution should be aligned.
+	 * 						Note that this alignment is chosen when a resolution is equal or coarser.
+	 * @return The given resolutions mapped to a fitting calendar alignment.
+	 */
+	public static List<ResolutionAndAlignment> getResolutionAlignmentMap(List<Resolution> resolutions, Alignment alignmentHint) {
+
+		return resolutions.stream()
+				.map(r -> ResolutionAndAlignment.of(r, getFittingAlignment(alignmentHint, r)))
+				.collect(Collectors.toList());
+	}
+
+	private static Alignment getFittingAlignment(Alignment alignmentHint, Resolution resolution) {
+		if(resolution.isAlignmentSupported(alignmentHint) ) {
+			return alignmentHint;
+		}
+		return resolution.getDefaultAlignment();
+	}
+
 	@Override
 	public void visit(Consumer<Visitable> visitor) {
 		visitor.accept(this);
@@ -99,13 +125,23 @@ public class ExportForm extends Form implements InternalForm {
 		features.forEach(visitor);
 	}
 
-
 	@Override
 	public Map<String, Query> createSubQueries() {
 		return Map.of(
 				ConqueryConstants.SINGLE_RESULT_TABLE_NAME,
 				timeMode.createSpecializedQuery()
 		);
+	}
+
+	@Override
+	public String getLocalizedTypeLabel() {
+		return C10N.get(ExportFormC10n.class, I18n.LOCALE.get()).getType();
+	}
+
+	@Override
+	public ManagedInternalForm<ExportForm> toManagedExecution(UserId user, DatasetId submittedDataset, MetaStorage storage, DatasetRegistry<?> datasetRegistry,
+															  ConqueryConfig config) {
+		return new ManagedInternalForm<>(this, user, submittedDataset, storage, datasetRegistry, config);
 	}
 
 	@Override
@@ -120,7 +156,7 @@ public class ExportForm extends Form implements InternalForm {
 	@Override
 	public void resolve(QueryResolveContext context) {
 		if(queryGroupId != null) {
-			queryGroup = (ManagedQuery) context.getStorage().getExecution(queryGroupId);
+			queryGroup = (ManagedQuery) queryGroupId.resolve();
 			prerequisite = queryGroup.getQuery();
 		}
 		else {
@@ -129,7 +165,7 @@ public class ExportForm extends Form implements InternalForm {
 
 
 		// Apply defaults to user concept
-		ExportForm.DefaultSelectSettable.enable(features);
+		DefaultSelectSettable.enable(features);
 
 		timeMode.resolve(context);
 
@@ -143,40 +179,35 @@ public class ExportForm extends Form implements InternalForm {
 			if (resolutionsFlat.size() != 1) {
 				throw new IllegalStateException("Abort Form creation, because coarser subdivision are requested and multiple resolutions are given. With 'alsoCreateCoarserSubdivisions' set to true, provide only one resolution.");
 			}
-			resolvedResolutions = resolutionsFlat.get(0).getThisAndCoarserSubdivisions();
+			resolvedResolutions = resolutionsFlat.getFirst().getThisAndCoarserSubdivisions();
 		}
 		else {
 			resolvedResolutions = resolutionsFlat;
 		}
 	}
 
-	@Override
-	public String getLocalizedTypeLabel() {
-		return C10N.get(ExportFormC10n.class, I18n.LOCALE.get()).getType();
-	}
-
-
 	/**
-	 * Maps the given resolution to a fitting alignment. It tries to use the alignment which was given as a hint.
-	 * If the alignment does not fit to a resolution (resolution is finer than the alignment), the first alignment that
-	 * this resolution supports is chosen (see the alignment order in {@link Resolution})
-	 * @param resolutions The temporal resolutions for which sub queries should be generated per entity
-	 * @param alignmentHint The preferred calendar alignment on which the sub queries of each resolution should be aligned.
-	 * 						Note that this alignment is chosen when a resolution is equal or coarser.
-	 * @return The given resolutions mapped to a fitting calendar alignment.
+	 * Classes that can be used as Features in ExportForm, having default-exists, are triggered this way.
 	 */
-	public static List<ExportForm.ResolutionAndAlignment> getResolutionAlignmentMap(List<Resolution> resolutions, Alignment alignmentHint) {
+	public interface DefaultSelectSettable {
 
-		return resolutions.stream()
-				.map(r -> ResolutionAndAlignment.of(r, getFittingAlignment(alignmentHint, r)))
-				.collect(Collectors.toList());
-	}
-
-	private static Alignment getFittingAlignment(Alignment alignmentHint, Resolution resolution) {
-		if(resolution.isAlignmentSupported(alignmentHint) ) {
-			return alignmentHint;
+		static void enable(CQElement feature) {
+			switch (feature) {
+				case DefaultSelectSettable settable  -> settable.setDefaultSelects();
+				// CQNegation and CQDateRestriction chain CQElements and don't have selects themselves
+				case CQNegation negation -> enable(negation.getChild());
+				case CQDateRestriction dr -> enable(dr.getChild());
+				default -> {}
+			}
 		}
-		return resolution.getDefaultAlignment();
+
+		static void enable(List<CQElement> features) {
+			for (CQElement feature : features) {
+				enable(feature);
+			}
+		}
+
+		void setDefaultSelects();
 	}
 
 	/**
@@ -196,26 +227,5 @@ public class ExportForm extends Form implements InternalForm {
 
 			return new ResolutionAndAlignment(resolution, alignment);
 		}
-	}
-
-	/**
-	 * Classes that can be used as Features in ExportForm, having default-exists, are triggered this way.
-	 */
-	public static interface DefaultSelectSettable {
-		public static void enable(List<CQElement> features) {
-			for (CQElement feature : features) {
-				if(feature instanceof DefaultSelectSettable){
-					((DefaultSelectSettable) feature).setDefaultExists();
-				}
-			}
-		}
-
-		void setDefaultExists();
-	}
-
-
-	@Override
-	public ManagedForm toManagedExecution(User user, Dataset submittedDataset, MetaStorage storage) {
-		return new ManagedInternalForm(this, user, submittedDataset, storage);
 	}
 }
