@@ -3,22 +3,25 @@ package com.bakdata.conquery.models.jobs;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.stream.Collectors;
 
 import com.bakdata.conquery.io.storage.WorkerStorage;
 import com.bakdata.conquery.models.datasets.concepts.tree.ConceptTreeConnector;
-import com.bakdata.conquery.models.events.Bucket;
 import com.bakdata.conquery.models.events.BucketManager;
 import com.bakdata.conquery.models.events.CBlock;
-import com.bakdata.conquery.models.identifiable.IdMutex;
+import com.bakdata.conquery.models.identifiable.ids.specific.BucketId;
 import com.bakdata.conquery.models.identifiable.ids.specific.CBlockId;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.ListeningExecutorService;
 import com.google.common.util.concurrent.MoreExecutors;
+import lombok.Data;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
-import lombok.Setter;
+import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
 
 /**
@@ -28,44 +31,61 @@ import lombok.extern.slf4j.Slf4j;
  */
 @RequiredArgsConstructor
 @Slf4j
-
+@Getter
+@ToString(onlyExplicitlyIncluded = true)
 public class CalculateCBlocksJob extends Job {
 
-	private final List<CalculationInformation> infos = new ArrayList<>();
+	private final List<CalculationInformationProcessor> tasks = new ArrayList<>();
 	private final WorkerStorage storage;
 	private final BucketManager bucketManager;
 	private final ExecutorService executorService;
 
-	@Override
-	public String getLabel() {
-		return "Calculate CBlocks[" + infos.size() + "]";
-	}
-
-	public void addCBlock(Bucket bucket, ConceptTreeConnector connector) {
-		infos.add(new CalculationInformation(connector, bucket));
+	public void addCBlock(BucketId bucketId, ConceptTreeConnector connector) {
+		tasks.add(new CalculationInformationProcessor(connector, bucketId, bucketManager, storage));
 	}
 
 	@Override
 	public void execute() throws Exception {
-		if(infos.isEmpty()){
+		if (tasks.isEmpty()) {
 			return;
 		}
 
-		getProgressReporter().setMax(infos.size());
+		log.info("BEGIN calculate CBlocks for {} entries.", tasks.size());
 
-		final ListeningExecutorService executorService = MoreExecutors.listeningDecorator(this.executorService);
+		getProgressReporter().setMax(tasks.size());
 
-		final List<? extends ListenableFuture<?>> futures = infos.stream()
-				.map(this::createInformationProcessor)
-				.map(executorService::submit)
-				.peek(f -> f.addListener(this::incrementProgressReporter, MoreExecutors.directExecutor()))
-				.collect(Collectors.toList());
+		final ListeningExecutorService executorService = MoreExecutors.listeningDecorator(getExecutorService());
 
-		Futures.allAsList(futures).get();
+		final List<? extends ListenableFuture<?>> futures =
+				tasks.stream()
+					 .map(executorService::submit)
+					 .peek(fut -> fut.addListener(this::incrementProgressReporter, MoreExecutors.directExecutor()))
+					 .collect(Collectors.toList());
+
+
+		final ListenableFuture<?> all = Futures.allAsList(futures);
+
+		while (!all.isDone()) {
+			try {
+				all.get(1, TimeUnit.MINUTES);
+			}
+			catch (TimeoutException exception) {
+				log.debug("submitted={}, pool={}", tasks.size(), getExecutorService());
+
+				if (log.isTraceEnabled() && getExecutorService() instanceof ThreadPoolExecutor) {
+					log.trace("Waiting for {}", ((ThreadPoolExecutor) getExecutorService()).getQueue());
+				}
+			}
+		}
+
+		log.debug("DONE CalculateCBlocks for {} entries.", tasks.size());
+
 	}
 
-	private CalculationInformationProcessor createInformationProcessor(CalculationInformation info) {
-		return new CalculationInformationProcessor(info, bucketManager, storage);
+	@ToString.Include
+	@Override
+	public String getLabel() {
+		return "Calculate CBlocks[" + tasks.size() + "]";
 	}
 
 	private void incrementProgressReporter() {
@@ -73,53 +93,44 @@ public class CalculateCBlocksJob extends Job {
 	}
 
 	public boolean isEmpty() {
-		return infos.isEmpty();
-	}
-
-	@RequiredArgsConstructor
-	@Getter
-	@Setter
-	private static class CalculationInformation {
-		private final ConceptTreeConnector connector;
-		private final Bucket bucket;
-
-		public CBlockId getCBlockId() {
-			return new CBlockId(getBucket().getId(), getConnector().getId());
-		}
+		return tasks.isEmpty();
 	}
 
 
-	@RequiredArgsConstructor
+	@Data
+	@ToString(onlyExplicitlyIncluded = true)
 	private static class CalculationInformationProcessor implements Runnable {
-		private final CalculationInformation info;
+		private final ConceptTreeConnector connector;
+		private final BucketId bucketId;
+
 		private final BucketManager bucketManager;
 		private final WorkerStorage storage;
 
 		@Override
 		public void run() {
 			try {
-				try(IdMutex.Locked ignored = bucketManager.acquireLock(info.connector)) {
-					if (bucketManager.hasCBlock(info.getCBlockId())) {
-						log.trace("Skipping calculation of CBlock[{}] because its already present in the BucketManager.", info.getCBlockId());
-						return;
-					}
-
-					CBlock cBlock = CBlock.createCBlock(info.getConnector(), info.getBucket(), bucketManager.getEntityBucketSize());
-
-					bucketManager.addCalculatedCBlock(cBlock);
-					storage.addCBlock(cBlock);
+				if (bucketManager.hasCBlock(getCBlockId())) {
+					log.trace("Skipping calculation of CBlock[{}] because its already present in the BucketManager.", getCBlockId());
+					return;
 				}
+
+				log.trace("BEGIN calculating CBlock for {}", getCBlockId());
+
+				final CBlock cBlock = CBlock.createCBlock(getConnector(), getBucketId(), bucketManager);
+
+				log.trace("DONE calculating CBlock for {}", getCBlockId());
+
+				bucketManager.addCalculatedCBlock(cBlock);
+				storage.addCBlock(cBlock);
 			}
 			catch (Exception e) {
-				throw new RuntimeException(
-						String.format(
-								"Exception in CalculateCBlocksJob (CBlock=%s, connector=%s)",
-								info.getCBlockId(),
-								info.getConnector()
-						),
-						e
-				);
+				throw new RuntimeException("Exception in CalculateCBlocksJob %s".formatted(getCBlockId()), e);
 			}
+		}
+
+		@ToString.Include
+		public CBlockId getCBlockId() {
+			return new CBlockId(getBucketId(), getConnector().getId());
 		}
 
 	}
