@@ -1,18 +1,21 @@
 package com.bakdata.conquery.models.preproc;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
-import java.util.StringJoiner;
 import java.util.stream.Collectors;
 
 import com.bakdata.conquery.models.datasets.Column;
+import com.bakdata.conquery.models.datasets.Import;
+import com.bakdata.conquery.models.datasets.ImportColumn;
 import com.bakdata.conquery.models.datasets.Table;
 import com.bakdata.conquery.models.events.MajorTypeId;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import lombok.AllArgsConstructor;
+import com.bakdata.conquery.models.events.stores.root.ColumnStore;
+import com.bakdata.conquery.models.identifiable.ids.specific.TableId;
 import lombok.Data;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 
@@ -23,66 +26,88 @@ import lombok.extern.slf4j.Slf4j;
  */
 @Data
 @Getter @Setter
-@NoArgsConstructor(onConstructor_ = {@JsonCreator})
-@AllArgsConstructor
+@RequiredArgsConstructor
 @Slf4j
 public class PreprocessedHeader {
 	/**
 	 * The name/tag of an import.
 	 */
-	private String name;
+	private final String name;
 
 	/**
 	 * The specific table id to be loaded into.
 	 */
-	private String table;
+	private final String table;
 
 	/**
 	 * Number of rows in the Preprocessed file.
 	 */
-	private long rows;
+	private final long rows;
+	private final long numberOfEntities;
+
+	//TODO use Set<Integer> to track actually included buckets,to split phase bucket assignment.
+	private final int numberOfBuckets;
 
 	/**
 	 * The specific columns and their associated MajorType for validation.
 	 */
-	private PPColumn[] columns;
+	private final PPColumn[] columns;
 
 	/**
 	 * A hash to check if any of the underlying files for generating this CQPP has changed.
 	 */
-	private int validityHash;
+	private final int validityHash;
+
+	public Import createImportDescription(TableId tableId, Map<String, ColumnStore> stores) {
+		final Import imp = new Import(getName(), tableId);
+
+		imp.setNumberOfEntries(getRows());
+		imp.setNumberOfEntities(getNumberOfEntities());
+
+		final ImportColumn[] importColumns = new ImportColumn[columns.length];
+
+		for (int i = 0; i < columns.length; i++) {
+			final ColumnStore store = stores.get(columns[i].getName());
+
+			final ImportColumn col = new ImportColumn(imp, store.createDescription(), store.getLines(), numberOfBuckets * store.estimateMemoryConsumptionBytes());
+
+			col.setName(columns[i].getName());
+
+			importColumns[i] = col;
+		}
+
+		imp.setColumns(importColumns);
+
+		return imp;
+	}
 
 
 	/**
 	 * Verify that the supplied table matches the preprocessed' data in shape.
 	 */
-	public void assertMatch(Table table) {
-		StringJoiner errors = new StringJoiner("\n");
+	public List<String> assertMatch(Table table) {
+		final List<String> errors = new ArrayList<>();
 
 		if (table.getColumns().length != getColumns().length) {
-			errors.add(String.format("Length=`%d` does not match table Length=`%d`", getColumns().length, table.getColumns().length));
+			errors.add("Import column count=`%d` does not match table column count=`%d`".formatted(getColumns().length, table.getColumns().length));
 		}
 
-		final Map<String, MajorTypeId> typesByName = Arrays.stream(getColumns())
-													   .collect(Collectors.toMap(PPColumn::getName, PPColumn::getType));
+		final Map<String, MajorTypeId> typesByName = Arrays.stream(getColumns()).collect(Collectors.toMap(PPColumn::getName, PPColumn::getType));
 
 		for (int i = 0; i < Math.min(table.getColumns().length, getColumns().length); i++) {
 			final Column column = table.getColumns()[i];
 
-			if(!typesByName.containsKey(column.getName())){
-				errors.add(String.format("Column[%s] is missing in Import.", column.getName()));
+			if (!typesByName.containsKey(column.getName())) {
+				errors.add("Column[%s] is missing.".formatted(column.getName()));
+				continue;
 			}
-			else if (!typesByName.get(column.getName()).equals(column.getType())) {
-				errors.add(String.format("Column[%s] Types do not match %s != %s"
-						, column.getName(),  typesByName.get(column.getName()), column.getType())
-				);
+
+			if (!typesByName.get(column.getName()).equals(column.getType())) {
+				errors.add("Column[%s] Types do not match %s != %s".formatted(column.getName(), typesByName.get(column.getName()), column.getType()));
 			}
 		}
 
-		if (errors.length() != 0) {
-			log.error(errors.toString());
-			throw new IllegalArgumentException(String.format("Headers[%s.%s] do not match Table[%s]. More Info in Logs.", getTable(), getName(), table.getId()));
-		}
+		return errors;
 	}
 
 
