@@ -13,9 +13,9 @@ import java.util.Set;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
-
-import javax.inject.Inject;
-import javax.validation.Validator;
+import java.util.stream.Stream;
+import jakarta.inject.Inject;
+import jakarta.validation.Validator;
 
 import com.bakdata.conquery.apiv1.IdLabel;
 import com.bakdata.conquery.apiv1.frontend.FrontendList;
@@ -29,17 +29,16 @@ import com.bakdata.conquery.models.config.ConqueryConfig;
 import com.bakdata.conquery.models.datasets.Dataset;
 import com.bakdata.conquery.models.datasets.PreviewConfig;
 import com.bakdata.conquery.models.datasets.concepts.Concept;
+import com.bakdata.conquery.models.datasets.concepts.ConceptElement;
 import com.bakdata.conquery.models.datasets.concepts.FrontEndConceptBuilder;
-import com.bakdata.conquery.models.datasets.concepts.Searchable;
-import com.bakdata.conquery.models.datasets.concepts.filters.Filter;
 import com.bakdata.conquery.models.datasets.concepts.filters.specific.SelectFilter;
-import com.bakdata.conquery.models.datasets.concepts.tree.ConceptTreeChild;
 import com.bakdata.conquery.models.datasets.concepts.tree.TreeConcept;
 import com.bakdata.conquery.models.exceptions.ConceptConfigurationException;
 import com.bakdata.conquery.models.exceptions.ValidatorHelper;
 import com.bakdata.conquery.models.identifiable.ids.specific.ConceptElementId;
 import com.bakdata.conquery.models.identifiable.ids.specific.ConnectorId;
 import com.bakdata.conquery.models.identifiable.ids.specific.DatasetId;
+import com.bakdata.conquery.models.identifiable.ids.specific.FilterId;
 import com.bakdata.conquery.models.worker.DatasetRegistry;
 import com.bakdata.conquery.models.worker.Namespace;
 import com.bakdata.conquery.util.CalculatedValue;
@@ -50,6 +49,9 @@ import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
 import com.google.common.collect.Iterators;
+import it.unimi.dsi.fastutil.objects.Object2LongMap;
+import it.unimi.dsi.fastutil.objects.Object2LongOpenHashMap;
+import lombok.Data;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -79,14 +81,14 @@ public class ConceptsProcessor {
 	/**
 	 * Cache of all search results on SelectFilters.
 	 */
-	private final LoadingCache<Pair<Searchable<?>, String>, List<FrontendValue>>
+	private final LoadingCache<Pair<SelectFilter<?>, String>, List<FrontendValue>>
 			searchResults =
 			CacheBuilder.newBuilder().softValues().build(new CacheLoader<>() {
 
 				@Override
-				public List<FrontendValue> load(Pair<Searchable<?>, String> filterAndSearch) {
+				public List<FrontendValue> load(Pair<SelectFilter<?>, String> filterAndSearch) {
 					final String searchTerm = filterAndSearch.getValue();
-					final Searchable<?> searchable = filterAndSearch.getKey();
+					final SelectFilter<?> searchable = filterAndSearch.getKey();
 
 					log.trace("Calculating a new search cache for the term \"{}\" on Searchable[{}]", searchTerm, searchable.getId());
 
@@ -98,18 +100,18 @@ public class ConceptsProcessor {
 	 * Cache of raw listing of values on a filter.
 	 * We use Cursor here to reduce strain on memory and increase response time.
 	 */
-	private final LoadingCache<Searchable<?>, CursorAndLength> listResults = CacheBuilder.newBuilder().softValues().build(new CacheLoader<>() {
+	private final LoadingCache<SelectFilter<?>, CursorAndLength> listResults = CacheBuilder.newBuilder().softValues().build(new CacheLoader<>() {
 		@Override
-		public CursorAndLength load(Searchable<?> searchable) {
+		public CursorAndLength load(SelectFilter<?> searchable) {
 			log.trace("Creating cursor for `{}`", searchable.getId());
 			return new CursorAndLength(listAllValues(searchable), countAllValues(searchable));
 		}
 
 	});
 
-	public FrontendRoot getRoot(NamespaceStorage storage, Subject subject) {
+	public FrontendRoot getRoot(NamespaceStorage storage, Subject subject, boolean showHidden) {
 
-		final FrontendRoot root = getFrontEndConceptBuilder().createRoot(storage, subject);
+		final FrontendRoot root = getFrontEndConceptBuilder().createRoot(storage, subject, showHidden);
 
 		// Report Violation
 		ValidatorHelper.createViolationsString(validator.validate(root), log.isTraceEnabled()).ifPresent(log::warn);
@@ -126,17 +128,16 @@ public class ConceptsProcessor {
 		}
 	}
 
-	public List<IdLabel<DatasetId>> getDatasets(Subject subject) {
+	public Stream<IdLabel<DatasetId>> getDatasets(Subject subject) {
 		return namespaces.getAllDatasets()
-						 .stream()
 						 .filter(d -> subject.isPermitted(d, Ability.READ))
+						 .map(DatasetId::resolve)
 						 .sorted(Comparator.comparing(Dataset::getWeight).thenComparing(Dataset::getLabel))
-						 .map(d -> new IdLabel<>(d.getId(), d.getLabel()))
-						 .collect(Collectors.toList());
+						 .map(d -> new IdLabel<>(d.getId(), d.getLabel()));
 	}
 
-	public FrontendPreviewConfig getEntityPreviewFrontendConfig(Dataset dataset) {
-		final Namespace namespace = namespaces.get(dataset.getId());
+	public FrontendPreviewConfig getEntityPreviewFrontendConfig(DatasetId dataset) {
+		final Namespace namespace = namespaces.get(dataset);
 		final PreviewConfig previewConfig = namespace.getPreviewConfig();
 
 		// Connectors only act as bridge to table for the fronted, but also provide ConceptColumnT semantic
@@ -144,14 +145,14 @@ public class ConceptsProcessor {
 		return new FrontendPreviewConfig(
 				previewConfig.getAllConnectors()
 							 .stream()
-							 .map(id -> new FrontendPreviewConfig.Labelled(id.toString(), namespace.getCentralRegistry().resolve(id).getTable().getLabel()))
+							 .map(id -> new FrontendPreviewConfig.Labelled(id.toString(), id.resolve().getResolvedTable().getLabel()))
 							 .collect(Collectors.toSet()),
 
 				previewConfig.getDefaultConnectors()
 							 .stream()
-							 .map(id -> new FrontendPreviewConfig.Labelled(id.toString(), namespace.getCentralRegistry().resolve(id).getTable().getLabel()))
+							 .map(id -> new FrontendPreviewConfig.Labelled(id.toString(), id.resolve().getResolvedTable().getLabel()))
 							 .collect(Collectors.toSet()),
-				previewConfig.resolveSearchFilters(),
+				previewConfig.getSearchFilters(),
 				previewConfig.resolveSearchConcept()
 		);
 	}
@@ -160,16 +161,17 @@ public class ConceptsProcessor {
 	 * Search for all search terms at once, with stricter scoring.
 	 * The user will upload a file and expect only well-corresponding resolutions.
 	 */
-	public ResolvedFilterValues resolveFilterValues(Searchable<?> searchable, List<String> searchTerms) {
+	public ResolvedFilterValues resolveFilterValues(FilterId filterId, List<String> searchTerms) {
+		SelectFilter<?> filter = (SelectFilter<?>) filterId.resolve();
 
 		// search in the full text engine
 		final Set<String> openSearchTerms = new HashSet<>(searchTerms);
 
-		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
+		final Namespace namespace = namespaces.get(filter.getDataset());
 
 		final List<FrontendValue> out = new ArrayList<>();
 
-		for (TrieSearch<FrontendValue> search : namespace.getFilterSearch().getSearchesFor(searchable)) {
+		for (TrieSearch<FrontendValue> search : namespace.getFilterSearch().getSearchesFor(filter)) {
 			for (final Iterator<String> iterator = openSearchTerms.iterator(); iterator.hasNext(); ) {
 
 				final String searchTerm = iterator.next();
@@ -184,20 +186,26 @@ public class ConceptsProcessor {
 			}
 		}
 
-		// Not all Searchables are children of Connectors.
-		final ConnectorId connectorId = searchable instanceof Filter asFilter ? asFilter.getConnector().getId() : null;
+		final ConnectorId connectorId = filter.getConnector().getId();
 
-		return new ResolvedFilterValues(new ResolvedFilterResult(connectorId, searchable.getId().toString(), out), openSearchTerms);
+		return new ResolvedFilterValues(new ResolvedFilterResult(connectorId, filter.getId().toString(), out), openSearchTerms);
 	}
 
-	public AutoCompleteResult autocompleteTextFilter(Searchable<?> searchable, Optional<String> maybeText, OptionalInt pageNumberOpt, OptionalInt itemsPerPageOpt) {
+	public AutoCompleteResult autocompleteTextFilter(
+			FilterId filterId,
+			Optional<String> maybeText,
+			OptionalInt pageNumberOpt,
+			OptionalInt itemsPerPageOpt
+	) {
 		final int pageNumber = pageNumberOpt.orElse(0);
 		final int itemsPerPage = itemsPerPageOpt.orElse(50);
 
 		Preconditions.checkArgument(pageNumber >= 0, "Page number must be 0 or a positive integer.");
 		Preconditions.checkArgument(itemsPerPage > 1, "Must at least have one item per page.");
 
-		log.trace("Searching for for  `{}` in `{}`. (Page = {}, Items = {})", maybeText, searchable.getId(), pageNumber, itemsPerPage);
+		final SelectFilter<?> filter = (SelectFilter<?>) filterId.resolve();
+
+		log.trace("Searching for for  `{}` in `{}`. (Page = {}, Items = {})", maybeText, filterId, pageNumber, itemsPerPage);
 
 		final int startIncl = itemsPerPage * pageNumber;
 		final int endExcl = startIncl + itemsPerPage;
@@ -206,13 +214,13 @@ public class ConceptsProcessor {
 
 			// If we have none or a blank query string we list all values.
 			if (maybeText.isEmpty() || maybeText.get().isBlank()) {
-				final CursorAndLength cursorAndLength = listResults.get(searchable);
+				final CursorAndLength cursorAndLength = listResults.get(filter);
 				final Cursor<FrontendValue> cursor = cursorAndLength.values();
 
 				return new AutoCompleteResult(cursor.get(startIncl, endExcl), cursorAndLength.size());
 			}
 
-			final List<FrontendValue> fullResult = searchResults.get(Pair.of(searchable, maybeText.get()));
+			final List<FrontendValue> fullResult = searchResults.get(Pair.of(filter, maybeText.get()));
 
 			if (startIncl >= fullResult.size()) {
 				return new AutoCompleteResult(Collections.emptyList(), fullResult.size());
@@ -221,13 +229,13 @@ public class ConceptsProcessor {
 			return new AutoCompleteResult(fullResult.subList(startIncl, Math.min(fullResult.size(), endExcl)), fullResult.size());
 		}
 		catch (ExecutionException e) {
-			log.warn("Failed to search for \"{}\".", maybeText, (Exception) (log.isTraceEnabled() ? e : null));
+			log.warn("Failed to search for `{}`.", maybeText, log.isTraceEnabled() ? e : null);
 			return new AutoCompleteResult(Collections.emptyList(), 0);
 		}
 	}
 
-	private Cursor<FrontendValue> listAllValues(Searchable<?> searchable) {
-		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
+	private Cursor<FrontendValue> listAllValues(SelectFilter<?> searchable) {
+		final Namespace namespace = namespaces.get(searchable.getDataset());
 		/*
 		Don't worry, I am as confused as you are!
 		For some reason, flatMapped streams in conjunction with distinct will be evaluated full before further operation.
@@ -251,8 +259,8 @@ public class ConceptsProcessor {
 		return new Cursor<>(Iterators.filter(iterators, seen::add));
 	}
 
-	private long countAllValues(Searchable<?> searchable) {
-		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
+	private int countAllValues(SelectFilter<?> searchable) {
+		final Namespace namespace = namespaces.get(searchable.getDataset());
 
 		return namespace.getFilterSearch().getTotal(searchable);
 	}
@@ -261,42 +269,27 @@ public class ConceptsProcessor {
 	 * Autocompletion for search terms. For values of {@link SelectFilter <?>}.
 	 * Is used by the serach cache to load missing items
 	 */
-	private List<FrontendValue> autocompleteTextFilter(Searchable<?> searchable, String text) {
-		final Namespace namespace = namespaces.get(searchable.getDataset().getId());
+	private List<FrontendValue> autocompleteTextFilter(SelectFilter<?> searchable, String text) {
+		final Namespace namespace = namespaces.get(searchable.getDataset());
 
 		// Note that FEValues is equals/hashcode only on value:
-		// The different sources might contain duplicate FEValue#values which we want to avoid as
-		// they are already sorted in terms of information weight by getSearchesFor
+		// The different sources might contain duplicate FEValue#values which we exploit:
+		// If a value is already present, it's from a search with higher priority.
 
-		// Also note: currently we are still issuing large search requests, but much smaller allocations at once, and querying only when the past is not sufficient
-		return namespace.getFilterSearch()
-						.getSearchesFor(searchable)
-						.stream()
-						.map(search -> createSourceSearchResult(search, Collections.singletonList(text), OptionalInt.empty()))
-						.flatMap(Collection::stream)
-						.distinct()
-						.collect(Collectors.toList());
+		final List<TrieSearch<FrontendValue>> searches = namespace.getFilterSearch().getSearchesFor(searchable);
 
+		final Object2LongMap<FrontendValue> overlayedWeights = new Object2LongOpenHashMap<>();
 
-	}
+		for (TrieSearch<FrontendValue> search : searches) {
 
-	/**
-	 * Do a search with the supplied values.
-	 */
-	private static List<FrontendValue> createSourceSearchResult(TrieSearch<FrontendValue> search, Collection<String> values, OptionalInt numberOfTopItems) {
-		if (search == null) {
-			return Collections.emptyList();
+			final Object2LongMap<FrontendValue> itemWeights = search.collectWeights(List.of(text));
+
+			itemWeights.forEach(overlayedWeights::putIfAbsent);
 		}
 
-		// Quicksearch can split and also schedule for us.
-		final List<FrontendValue> result = search.findItems(values, numberOfTopItems.orElse(Integer.MAX_VALUE));
+		return TrieSearch.topItems(Integer.MAX_VALUE, overlayedWeights);
 
-		if (numberOfTopItems.isEmpty() && result.size() == Integer.MAX_VALUE) {
-			//TODO This looks odd, do we really expect QuickSearch to allocate that huge of a list for us?
-			log.warn("The quick search returned the maximum number of results ({}) which probably means not all possible results are returned.", Integer.MAX_VALUE);
-		}
 
-		return result;
 	}
 
 	public ResolvedConceptsResult resolveConceptElements(TreeConcept concept, List<String> conceptCodes) {
@@ -306,7 +299,7 @@ public class ConceptsProcessor {
 
 		for (String conceptCode : conceptCodes) {
 			try {
-				final ConceptTreeChild child = concept.findMostSpecificChild(conceptCode, new CalculatedValue<>(Collections::emptyMap));
+				final ConceptElement<?> child = concept.findMostSpecificChild(conceptCode, new CalculatedValue<>(Collections::emptyMap));
 
 				if (child != null) {
 					resolvedCodes.add(child.getId());
@@ -319,16 +312,16 @@ public class ConceptsProcessor {
 				log.error("Error while trying to resolve `{}`", conceptCode, e);
 			}
 		}
-		return new ResolvedConceptsResult(resolvedCodes,  unknownCodes);
+		return new ResolvedConceptsResult(resolvedCodes, unknownCodes);
 	}
 
 	/**
 	 * Container class to pair number of available values and Cursor for those values.
 	 */
-	private record CursorAndLength(Cursor<FrontendValue> values, long size) {
+	private record CursorAndLength(Cursor<FrontendValue> values, int size) {
 	}
 
-	public record AutoCompleteResult(List<FrontendValue> values, long total) {
+	public record AutoCompleteResult(List<FrontendValue> values, int total) {
 	}
 
 	public record ResolvedFilterResult(ConnectorId tableId, String filterId, Collection<FrontendValue> value) {
@@ -339,6 +332,11 @@ public class ConceptsProcessor {
 
 	}
 
-	public record ResolvedConceptsResult(Set<ConceptElementId<?>> resolvedConcepts, Collection<String> unknownCodes) {
+	@Data
+	public static final class ResolvedConceptsResult {
+		private final Set<ConceptElementId<?>> resolvedConcepts;
+		private final Collection<String> unknownCodes;
+
+
 	}
 }
